--- a/20170825-pipelines/builds/development/index.html
+++ b/20170825-pipelines/builds/development/index.html
@@ -28,7 +28,7 @@
 
 <div class="slide" id="minnesota">
 <div class="chartTitle">Enbridge pipeline spills in Minnesota by year</div>
-<div class="chatter">About 60 <span class="legendary gray5">spill or release incidents</span> 5 or more barrels in volume have occurred on Enbridge-operated pipelines in Minnesota since 2002.</div>
+<div class="chatter">About 60 <span class="legendary gray5">spill or release incidents</span> have occurred on Enbridge-operated pipelines in Minnesota since 2002.</div>
 
 <div id="chartMN"></div>
 
@@ -37,36 +37,26 @@
 
 </div>
 
+
+<div class="slide" id="incidents">
+<div class="chartTitle">Enbridge spills in Minnesota by gallons</div>
+<div class="chatter">Since 2002, there have been about 336,300 <span class="legendary" style="background-color:#333333;color:#ffffff;">gallons spilled</span> -- mostly of crude oil -- on Enbridge pipelines in Minnesota.</div>
+
+<div id="chartGallons"></div>
+
+<div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
+</div>
+
 <div class="slide" id="mnspills">
 <div class="chartTitle">Minnesota pipeline incidents by year</div>
 <div class="chatter">Since 2002, there have been 207 <span class="legendary" style="background-color:#333333;color:#ffffff;">pipeline incidents</span> in Minnesota, resulting in five deaths, 10 injuries and about $50 million in damage.</div>
 
 <div id="chartMNSpills"></div>
 
-<div class="byline">Source: <a href="https://hip.phmsa.dot.gov/analyticsSOAP/saw.dll?Portalpages" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Minnesota Pollution Control Agency, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
+<div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
 </div>
 
 </div>
-
-<div class="slide" id="incidents">
-<div class="chartTitle">National pipeline incidents by year</div>
-<div class="chatter">Since 1997, there have been nearly 11,500 <span class="legendary" style="background-color:#333333;color:#ffffff;">pipeline incidents</span> nationally, resulting in 324 deaths and 1,333 injuries. Incidents had been rising since 2012 but dropped in 2016.</div>
-
-<div id="chartNational"></div>
-
-<div class="byline">Source: <a href="https://hip.phmsa.dot.gov/analyticsSOAP/saw.dll?Portalpages" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Minnesota Pollution Control Agency, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
-</div>
-
-<!-- <div class="slide" id="timeline" style="display:none !important;">
-<div class="chartTitle">Enbridge pipeline spills by year</div>
-<div class="chatter">At least 281 <span class="legendary" style="background-color:#333333;color:#ffffff;">spills or releases</span> have occured have on Enbridge-operated pipelines nationwide since 2002, with a sharp decline in 2016.</div>
-
-<div id="chartTrend"></div>
-
-<div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Minnesota Pollution Control Agency, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
-</div>
-
-</div> -->
 
 </div>
 
