--- a/20170825-pipelines/builds/development/index.html
+++ b/20170825-pipelines/builds/development/index.html
@@ -18,33 +18,12 @@
 
 <div class="slide" id="spills">
 <div class="chartTitle">Enbridge pipeline spills in Minnesota</div>
-<div class="chatter">Shows <span class="legendary" style="background-color:#b70c0c;color:#ffffff;">Enbridge pipelines</span> and <span class="legendary gray5">spills or releases</span> from 2002 to 2016. Locations are approximates based on available data.</div>
+<div class="chatter">Shows <span class="legendary" style="background-color:#b70c0c;color:#ffffff;">Enbridge pipelines</span> and <span class="legendary gray5">spills or releases</span> from 2002 to 2016. Locations are approximates based on available data. <span class="legendary" style="background-color:#888888;color:#ffffff;">Other pipelines and spills</span> displayed for context.</div>
 
 <div id="map"></div>
 
 <div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
 </div>
-</div>
-
-<div class="slide" id="minnesota">
-<div class="chartTitle">Enbridge pipeline spills in Minnesota by year</div>
-<div class="chatter">About 60 <span class="legendary gray5">spill or release incidents</span> have occurred on Enbridge-operated pipelines in Minnesota since 2002.</div>
-
-<div id="chartMN"></div>
-
-<div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Minnesota Pollution Control Agency, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
-</div>
-
-</div>
-
-
-<div class="slide" id="incidents">
-<div class="chartTitle">Enbridge spills in Minnesota by gallons</div>
-<div class="chatter">Since 2002, there have been about 336,300 <span class="legendary" style="background-color:#333333;color:#ffffff;">gallons spilled</span> -- mostly of crude oil -- on Enbridge pipelines in Minnesota.</div>
-
-<div id="chartGallons"></div>
-
-<div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
 </div>
 
 <div class="slide" id="mnspills">
@@ -56,6 +35,27 @@
 <div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
 </div>
 
+</div>
+
+<div class="slide" id="minnesota">
+<div class="chartTitle">Enbridge pipeline spills in Minnesota by year</div>
+<div class="chatter">About 60 <span class="legendary gray5">spill or release incidents</span> have occurred on Enbridge-operated pipelines in Minnesota since 2002, a third of which were considered <span class="legendary" style="background-color:#888888;color:#ffffff;">significant</span>, meaning five or more barrels in volume were spilled, or the incident resulted in an explosion, death, injury or $50,000 in damage.</div>
+
+<div id="chartMN"></div>
+
+<div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Minnesota Pollution Control Agency, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
+</div>
+
+</div>
+
+
+<div class="slide" id="incidents">
+<div class="chartTitle">Pipelines spills in Minnesota by gallons</div>
+<div class="chatter">Since 2002, there have been about 336,300 <span class="legendary" style="background-color:#333333;color:#ffffff;">gallons spilled on Enbridge pipelines</span> -- mostly of crude oil -- in Minnesota, about a third of the 1 million gallons of <span class="legendary" style="background-color:#888888;color:#ffffff;">hazardous liquids spilled</span> statewide over the time period.</div>
+
+<div id="chartGallons"></div>
+
+<div class="byline">Source: <a href="https://www.phmsa.dot.gov/pipeline/library/data-stats/pipelineincidenttrends" target="new_">PHMSA</a>, <a href="https://www.eia.gov/maps/layer_info-m.php" target="new_">U.S. Energy Information Administration</a>, Star Tribune analysis | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="../data/maindata.xlsx" target="new_">Download Data</a>
 </div>
 
 </div>
